syntax = "proto3";
option csharp_namespace = "Server.ChatApp.Protos";
package common;

service SharedRpcs{
	rpc shared(Empty) returns(Empty);
}

message Empty{

}
message ErrorInfo{
	string Code = 1;
	string Description = 2;
}

message ResultMsg{
	bool IsSuccessful = 1;
	repeated ErrorInfo messages = 2;
}

message UsersConnection {
	string ReceiverId = 1;
	string RequesterId = 2;
}

message UserMsg {
	string UserId = 1;
}

message RowMsg{
	string RowId = 1;
}